# qhexedit2

./: .gitignore  .gitlab-ci.yml
src/: .editorconfig  CMakeLists.txt  qhexedit.cpp  qhexedit.h
